# pydantic-pystac-extensions

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.gitlab/ci/: base.yml
pydantic_pystac_extensions/: __init__.py  core.py  schema.py  testing.py
stac_extension_genmeta/: __init__.py  core.py  testing.py
stacflow-stac-extension/: __init__.py
stacflow_stac_extension/: __init__.py  core.py  schema.py  testing.py
tests/: constants.py  dummy.py  extensions_test.py  test_core.py  test_eo.py  test_models.py  test_simple_example.py  test_utils.py  utils.py
tests/baseline/ext0/v1.1.0/: schema.json
tests/baseline/ext1/v1.1.0/: schema.json
tests/baseline/ext2/v1.1.0/: schema.json
