[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-extension-genmeta"
description = "Helper to build custom STAC extensions based on pydantic models"
authors = [
    { name = "Rémi Cresson", email = "remi.cresson@inrae.fr" },
]
requires-python = ">=3.7"
dependencies = [
    "pydantic >= 2.0.0",
    "pystac",
]
license = { text = "Apache-2.0" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["stac_extension_genmeta"]

[tool.setuptools.dynamic]
version = { attr = "stac_extension_genmeta.__version__" }

[tool.pydocstyle]
convention = "google"

