[project]
name = "pydantic-pystac-extensions"
description = "Helper to build custom STAC extensions based on pydantic models"
authors = [
    { name = "Rémi Cresson", email = "remi.cresson@inrae.fr" },
    { name = "Pablo Boizeau", email = "pablo.boizeau@ird.fr" },
]
requires-python = ">=3.8"
dependencies = [
    "pydantic >= 2.0.0",
    "pystac",
]
license = { text = "Apache-2.0" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["pydantic_pystac_extensions"]

[project.optional-dependencies]
test = ["requests", "pystac[validation]", "pytest"]

[tool.pylint]
disable = "W0231"

[tool.pydocstyle]
convention = "google"
